option('maintainer', type : 'boolean', value: false)
option('optimize', type : 'boolean', value: true)

option('guiclient', type : 'boolean', value: false)
option('device', type : 'boolean', value: true)

option('debug_print', type : 'boolean', value: false)
option('simulate_data', type : 'boolean', value: false)
